Fixed c4gLoader z-index

--- a/Resources/public/src/scss/c4gLoader.scss
+++ b/Resources/public/src/scss/c4gLoader.scss
@@ -18,7 +18,7 @@
     top: 5%;
     box-sizing: border-box;
     text-align: center;
-    z-index: 0;
+    z-index: 100;
     text-transform: uppercase;
     -o-text-transform: uppercase;
     -ms-text-transform: uppercase;
